<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="darkTheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="mediateka">Медиатека</string>
    <string name="shareMsg" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportMailTo" translatable="false">iva@scoring.ru</string>
    <string name="supportMailSubject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMailBody" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="userAgreemLink" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="chooserMsg">Выберите приложение</string>
    <string name="backButton">Назад</string>
    <string name="baseUrl" translatable="false">https://itunes.apple.com</string>
    <string name="errNotFound">Ничего не нашлось</string>
    <string name="errConnection">Проблемы со связью</string>
    <string name="errDownload">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="albumName">Альбом</string>
    <string name="albumYear">Год</string>
    <string name="albumGenre">Жанр</string>
    <string name="country">Страна</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="emptyPlaylistLibrary" translatable="false">Вы не создали \nни одного плейлиста</string>
    <string name="emptyLibrary">Ваша медиатека пуста</string>
    <string name="favoritesTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create">Создать</string>
    <string name="playlistNane">Название*</string>
    <string name="description">Описание</string>
    <string name="requiredField">Обязательное поле</string>
    <string name="confirmMessageHeader" translatable="false">Завершить создание плейлиста?</string>
    <string name="confirmMessage" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="confirmButton" translatable="false">Завершить</string>
    <string name="confirmCancel" translatable="false">Отмена</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="addedToPlaylist">Добавлено в плейлист %s»</string>
    <string name="alreadyExists">Трек уже добавлен в плейлист %s</string>
    <string name="playlistNotFound">Плейлист не найден</string>
    <string name="emptyPlaylist" translatable="false">Данный плейлист пуст</string>
    <string name="sharePlaylist" translatable="false">Поделиться</string>
    <string name="editPlaylist" translatable="false">Редактировать информацию</string>
    <string name="deletePlaylist" translatable="false">Удалить плейлист</string>
    <string name="deletePlaylistConfirm" translatable="false">Хотите удалить плейлист?</string>
    <string name="deleteTrack" translatable="false">Хотите удалить трек?</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="shareEmptyPlaylist" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="editPlaylistHeader" translatable="false">Редактировать</string>
    <string name="saveChanges" translatable="false">Сохранить</string>
</resources>