<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/settingsScreen"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/CustomToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="@color/yp_black"
        app:title="@string/search">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/darkTheme"
        android:textSize="16sp"
        style="@style/switchButton"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shareBtn"
        android:drawableEnd="@drawable/ic_share_24"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/shareApp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/supportBtn"
        android:drawableEnd="@drawable/ic_support_24"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userAgreemBtn"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/userAgreement"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>
